# embedded-lab2

./: .gitignore  README.md  SDK11M.cfg  cross_gcc.build  meson.build
Core/: meson.build
Core/Inc/: kb.h  pca9538.h  sdk_uart.h
Core/Src/: sdk_uart.c
Drivers/: meson.build
Drivers/CMSIS/: meson.build  src_list.txt
Drivers/STM32F4xx_HAL_Driver/: meson.build
Startup/: startup_stm32f407xx.s
