
core_include = []
core_src = []

core_include += include_directories('Inc')

core_src += files('Src/fonts.c')
core_src += files('Src/gpio.c')
core_src += files('Src/i2c.c')
core_src += files('Src/kb.c')
core_src += files('Src/main.c')
core_src += files('Src/oled.c')
core_src += files('Src/pca9538.c')
core_src += files('Src/sdk_uart.c')
core_src += files('Src/stm32f4xx_hal_msp.c')
core_src += files('Src/stm32f4xx_it.c')
core_src += files('Src/syscalls.c')
core_src += files('Src/system_stm32f4xx.c')
core_src += files('Src/usart.c')

